# FP8-MPS

./: .gitignore  README.md  pyproject.toml
docs/: METHODS.md
fp8_mps/: __init__.py  linear.py  quant.py
fp8_mps_emulator/: __init__.py  apply.py  linear.py
scripts/: run_qwen_mlp_mps.py  validate_ptq_qwen.py  validate_te_evo2.py
tests/: test_fp8.py
